fix text alignment

--- a/main.css
+++ b/main.css
@@ -40,12 +40,14 @@ h1 {
   font-size: 4rem;
   font-family: var(--header-font);
   text-align: center;
+  margin-bottom: 1rem;
 }
 h2 {
   color: var(--blue);
   font-size: 4.25rem;
   font-family: var(--cursive-font);
   text-align: center;
+  margin-top: 0;
 }
 
 img {
@@ -79,6 +81,7 @@ p span {
   display: inline-block;
   padding-right: 0.2rem;
   text-align: right;
+  font-family: var(--header-font)
 }
 p i {
   font-style: normal;
@@ -95,6 +98,9 @@ p i {
     height: auto;
     max-height: none;
   }
+  p {
+    width: 100%;
+  }
   main .container {
     flex-direction: column;
   }
@@ -103,6 +109,9 @@ p i {
 @media (max-width: 400px) {
   h1 {
     font-size: 10vw;
+  }
+  h2 {
+    font-size: 12vw;
   }
   p span {
     width: 30%;
